styles.css
#section1 {
	background-color: blue;
}
#section2 {
	background-color: green;
}
#section3 {
	background-color: red;
}
#section4 {
	background-color: gray;
}
div {
    height:75vh;
	padding: 0px;
	margin: 0px;
	border: 0px;
}
html {
	font-family: Courier;
}

